@@ -7,7 +7,6 @@ import org.springframework.stereotype.Component;
 import java.util.List;
 import java.util.Set;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
@@ -16,26 +15,35 @@ import com.fwai.turtle.persistence.entity.User;
 import com.fwai.turtle.service.interfaces.UserService;
 
 import lombok.extern.slf4j.Slf4j;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Component
 public class UserDetailsServiceImpl implements UserDetailsService {
 
-  @Autowired
-  private UserService userService;
+  private final UserService userService;
 
+  public UserDetailsServiceImpl(UserService userService) {
+    this.userService = userService;
+  }
+
+  @Override
   public UserDetails loadUserByUsername(String username) {
-
     User user = userService.findByUsername(username)
-        .orElseThrow(() -> new UsernameNotFoundException(username + "not found"));
+        .orElseThrow(() -> new UsernameNotFoundException(username + " not found"));
 
     log.debug(user.toString());
 
-    return new org.springframework.security.core.userdetails.User(user.getEmail(), user.getPassword(),
-        getAuthority(user.getRoles()));
+    return new org.springframework.security.core.userdetails.User(
+        user.getUsername(), 
+        user.getPassword(),
+        getAuthority(user.getRoles())
+    );
   }
 
   private List<SimpleGrantedAuthority> getAuthority(Set<Role> roles) {
-    return roles.stream().map(role -> new SimpleGrantedAuthority(role.getName())).toList();
+    return roles.stream()
+        .map(role -> new SimpleGrantedAuthority(role.getName()))
+        .collect(Collectors.toList());
   }
 }
